force-app/main/default/objects/Account_Particulars__c/Account_Particulars__c.object-meta.xml
<CustomObject>
    <label>Account Particulars</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Account Particulars Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Particulars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>