force-app/main/default/objects/Account_Particulars__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case;;</label>
    <referenceTo>MD_Case__c</referenceTo>
    <relationshipLabel>Account Particulars</relationshipLabel>
    <relationshipName>Account_Particulars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>