force-app/main/default/objects/Account_Particulars__c/fields/Part_no__c.field-meta.xml
<CustomField>
    <fullName>Part_no__c</fullName>
    <label>Part no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>