force-app/main/default/objects/Account_Particulars__c/fields/Service_Parts_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Parts_Description__c</fullName>
    <label>Service/Parts Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>