force-app/main/default/objects/Account_Particulars__c/fields/Total_Rs__c.field-meta.xml
<CustomField>
    <fullName>Total_Rs__c</fullName>
    <formula>Qty__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>